force-app/main/default/objects/Variation__c/Variation__c.object-meta.xml
<CustomObject>
    <label>Investment Schedule Variation</label>
    <nameField>
        <displayFormat>ISV-{00000}</displayFormat>
        <label>Investment  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Schedule Variations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>