force-app/main/default/objects/Variation__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>“Briefly describe the purpose of this variation. This will be useful information for the approver and for future reference.”</inlineHelpText>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>