force-app/main/default/objects/Variation__c/fields/Initiatives_Added__c.field-meta.xml
<CustomField>
    <fullName>Initiatives_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initiatives Added</label>
    <type>Checkbox</type>
</CustomField>