force-app/main/default/objects/Variation__c/fields/Initiatives_Varied__c.field-meta.xml
<CustomField>
    <fullName>Initiatives_Varied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initiatives Varied</label>
    <type>Checkbox</type>
</CustomField>