force-app/main/default/objects/Variation__c/fields/Investment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Investment_Schedule__c</fullName>
    <label>Investment Schedule</label>
    <referenceTo>Business_Case__c</referenceTo>
    <relationshipLabel>Investment Schedule Variations</relationshipLabel>
    <relationshipName>Investment_Schedule_Variations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>