force-app/main/default/objects/Variation__c/fields/Measures_Varied__c.field-meta.xml
<CustomField>
    <fullName>Measures_Varied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Measures Varied</label>
    <type>Checkbox</type>
</CustomField>