force-app/main/default/objects/Variation__c/fields/Payments_Varied__c.field-meta.xml
<CustomField>
    <fullName>Payments_Varied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payments Varied</label>
    <type>Checkbox</type>
</CustomField>