force-app/main/default/objects/Variation__c/fields/Related_Investment_Schedule_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Investment_Schedule_Id__c</fullName>
    <label>Related Investment Schedule Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>