force-app/main/default/objects/Variation__c/fields/Requirements_Varied__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Varied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requirements Varied</label>
    <type>Checkbox</type>
</CustomField>