force-app/main/default/objects/Variation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Shows the current Status of the variation</description>
    <formula>if(ISBLANK(Variation_Completed_Date__c), &quot;Draft&quot;, &quot;Completed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Variation Status changes to Completed once the Varied Investment Schedule has been approved</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>