force-app/main/default/objects/Variation__c/fields/Variation_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Variation_Completed_Date__c</fullName>
    <label>Variation Completed Date</label>
    <type>Date</type>
</CustomField>