force-app/main/default/objects/Variation__c/fields/Variation_Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Variation_Initiation_Date__c</fullName>
    <label>Variation Initiation Date</label>
    <type>Date</type>
</CustomField>