force-app/main/default/objects/Variation__c/listViews/All_Variations.listView-meta.xml
<ListView>
    <fullName>All_Variations</fullName>
    <columns>NAME</columns>
    <columns>Investment_Schedule__c</columns>
    <columns>Initiated_By__c</columns>
    <columns>Variation_Initiation_Date__c</columns>
    <columns>Variation_Completed_Date__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Variations</label>
</ListView>